@@ -127,6 +127,8 @@
     icon plugin, so users must have this installed.
 78. Use system menu icon for Linux builds. To revert to previous 3-line style
     icon pass -DUSE_SYSTEM_MENU_ICON=OFF to cmake.
+79. When downloading, and parsing, ListLive streams, if a station has more than
+    1 stream then list all streams - adding format and bitrate
 
 1.2.2
 -----
